<resources>
    <string name="app_name">MyProject.LoginPage</string>
    <string name="title_activity_profile_page">ProfilePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="errormessage_isemptyinput">Bu alan boş bırakılamaz!</string>
    <string name="errormessage_isminlenghtpassword">Şifre minimum 6 karakter olmadılır!</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="UpdatePasswordTitle">PAROLA\n Güncelleme Sayfası</string>
    <string name="info_passwordpage">Şifrenizi Değiştirmek için\n aşağıdaki bilgileri eksiksiz doldurunuz.</string>
    <string name="newPasswordTint">Yeni şifrenizi girin.</string>
    <string name="currentPasswordTint">Mevcut Şifrenizi giriniz</string>
    <string name="UpdatePassword_btnText">Parolamı güncelle</string>
    <string name="EmailPage_title">E-POSTA\n Güncelleme Sayfası</string>
    <string name="EnterNewEmail">E-posta adresi girin.</string>
    <string name="btn_updatemailText">E-Posta Adresini güncelle</string>
    <string name="mailPage_info">E-Posta Adresinizi Değiştirmek için \n aşağıdaki bilgileri eksiksiz doldurunuz.</string>
    <string name="UpdateMailInfoIconDescription">E-Posta Adresinizi Değiştirmek İçin \n Aşağıdaki Bilgileri Eksiksiz Doldurunuz.</string>
    <string name="enterCurrrentPassword">Şifrenizi giriniz</string>
    <string name="EnterNameTint">İsim</string>
    <string name="EnterSurnameTint">Soyisim</string>
    <string name="EnterMailTint">E-Posta adresi girin</string>
    <string name="RegisterButtonText">Kayıt Ol</string>
    <string name="todo">TODO</string>
    <string name="EnterPasswordTint">Parola Giriniz:</string>
    <string name="LoginButtonText">Giriş Yap</string>
    <string name="RegisterPageButtonText">Kayıt olmak için tıklayınız.</string>
    <string name="CancelText">İptal Et</string>
    <string name="BackTextString">Geri</string>
    <string name="UserNamePage_title">Kullanıcı İsmi \n Güncelleme Sayfası</string>
    <string name="EnterNewName">Adınızı Giriniz</string>
    <string name="EnterNewSurname">Soyadınızı Giriniz</string>
    <string name="UserNamePage_info">Kullanıcı Adınızı Değiştirmek İçin \n Aşağıdaki Bilgileri Eksiksiz Doldurunuz.</string>
    <string name="btn_updateNameText">İsimimi Güncelle</string>
</resources>