<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity=""
    android:background="@color/application_background"
    tools:context=".registerpage_activity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/application_darkbackground"
        android:text="Geri"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:theme="@style/CardView.Light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="64dp"
        android:layout_width="192dp"
        android:layout_height="192dp"
        android:layout_gravity="center"
        android:background="@mipmap/applicationlogo"

        android:contentDescription="@string/todo" />

    <EditText

        android:id="@+id/editTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/EnterNameTint"
        android:drawableStart="@drawable/ic_outline_accountname_circle_24"
        android:drawablePadding="16dp"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="@color/lightgray"
        android:textColor="@color/white"

        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="20dp"
        android:autofillHints=""
        android:importantForAutofill="no" />
    <EditText

        android:id="@+id/editTextPersonSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"

        android:textColorHint="@color/lightgray"
        android:textColor="@color/white"
        android:ems="10"
        android:hint="@string/EnterSurnameTint"
        android:drawableStart="@drawable/ic_outline_accountname_circle_24"
        android:drawablePadding="16dp"
        android:inputType="textPersonName"
        android:maxLength="25"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="20dp"
        android:autofillHints=""
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/editTextPersonEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/EnterMailTint"
        android:textColor="@color/white"
        android:textColorHint="@color/lightgray"
        android:drawableStart="@drawable/ic_baseline_mail_outline_24"
        android:drawablePadding="16dp"
        android:inputType="textEmailAddress"
        android:maxLength="35"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="48dp"
        android:drawableStart="@drawable/ic_baseline_password_key_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/EnterPasswordTint"
        android:inputType="textPassword"
        android:maxLength="25"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="@color/lightgray"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/editTextPersonName"
        tools:layout_editor_absoluteX="0dp"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="30dp"
        android:layout_marginHorizontal="30dp"
        android:background="@color/application_darkbackground"
        android:onClick="registerOnClick"
        android:text="@string/RegisterButtonText"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:theme="@style/CardView.Light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

</androidx.appcompat.widget.LinearLayoutCompat>